ontopia/src/test-data/ltm/error/version-not-first.ltm
#BASEURI "http://www.example.com"
#VERSION "1.3"

/* this isn't allowed; the #VERSION has to be first */
